[package]
name = "morpho-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "morpho-rs-cli"
path = "src/bin/morpho-rs-cli.rs"

[[bin]]
name = "morpho-rs-agent"
path = "src/bin/morpho-rs-agent.rs"


[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
walkdir = "2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
